@@ -2,6 +2,9 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
+  Updated eclass with the in-tree version for bug #148862.
+
   27 Sep 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
   Update vmware-server{,-console}'s dbus restrictions and bump to ensure security fix.
 
